# environim

./: .gitignore  CMakeLists.txt  environim.nimble
csource/: CMakeLists.txt  lwipopts.h
src/: config.nims  environim.nim
src/enviro/: common.nim  constants.nim  enviro.nim
src/enviro/boards/: indoor.nim
src/enviro/destinations/: mqtt.nim
